--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+
 body {
+
+  background: rgb(113, 151, 161);
+  color: rgb(51, 46, 46);
+  
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
