--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -9,6 +9,7 @@ header {
 h1 {
     letter-spacing: 5px;
     color: rgb(177, 31, 31);
-    font-size: 5em;
+    font-size: 2.5em;
+    font-weight: 800;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
